# atp-platform

./: .cursorrules  .gitignore  AGENTS.md  AI_OS_CONTEXT.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  atp  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  security-audit.yml
adapters/: README.md  __init__.py  claude_code.py  codex.py  cursor.py
adapters/aios_flow/: aios_flow_adapter.py
bridge/: bridge_server.py  context_enrichment.py  governance_hook.py  openclaw_bridge.py  run_persistence.py  tdf_run.py
cli/: README.md  atp  compose_chain.py  deployability_check.py  execution_session.py  inspect.py  integration_contract.py  output_contract.py  request_bundle.py  request_flow.py  request_flow_multi.py  request_prompt.py  review_summary.py  run.py  validate.py
core/: README.md  artifact_export.py  composition_contract.py  config.py  deployability_readiness.py  error_codes.py  evaluator.py  in_flight_tracker.py  integration_contract.py  integration_readiness.py  operator_review_summary.py  pricing.py  retry.py  session_tracking.py  streaming.py  structured_log.py  trace.py
docs/: README.md
generators/: __init__.py  llm.py  registry.py  types.py
help-app/: next.config.ts  package.json  pnpm-lock.yaml
profiles/: README.md
prompts/: README.md
registry/: README.md
schemas/: README.md
scripts/: README.md  aios_bridge.sh  bootstrap.sh  bridge_with_keychain.sh  init_repo.sh  smoke_request_chain.sh  smoke_run.sh  validate_registry.sh
templates/: README.md
tests/: README.md
(+479 files in other folders)
